--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
 	    "php": "^8.3",
-        "statamic/cms": "^5.0"
+        "statamic/cms": "^5.0 || ^6.0"
     },
     "require-dev": {
         "laravel/pint": "^1.10"
